# turingmachine

./: .gitignore  1.yaml  README.md  binarycounter.yaml  program.yaml  program2.yaml  turingmachine.cabal
app/: Main.hs
src/: ConfigMapper.hs  ConfigParser.hs  Driver.hs  Machine.hs  TapeParser.hs  Tokenizer.hs  Util.hs
test/: ConfigMapperSpec.hs  ConfigParserSpec.hs  DriverSpec.hs  MachineSpec.hs  TapeParserSpec.hs  TokenizerSpec.hs
