name: turingmachine
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
homepage: https://github.com/prSquirrel/turingmachine#readme
synopsis: Initial project template from stack
description:
    Please see README.md

source-repository head
    type: git
    location: https://github.com/prSquirrel/turingmachine

library
    exposed-modules:
        Machine,
        Driver
    build-depends:
        base >=4.7 && <5,
        containers -any,
        syb -any,
        safe -any,
        parsec -any
    default-language: Haskell2010
    hs-source-dirs: src

executable turingmachine-exe
    main-is: Main.hs
    build-depends:
        base -any,
        turingmachine -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite turingmachine-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        turingmachine -any,
        hspec -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
